--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "watch": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Nahuel Ladeda",
   "license": "ISC",
   "description": "",
   "dependencies": {
